# NCEPLIBS-nemsiogfs

./: CMakeLists.txt  LICENSE.md  README.md  Release_Notes.nemsiogfs.v1.0.1.txt  Release_Notes.nemsiogfs.v1.1.0.txt  build.sh  build_nemsiogfs.sh  makefile  nemsio_gfs.f90  readme
.github/workflows/: Intel.yml  Spack.yml  main.yml
Conf/: AAA_rename_conf.sh  Nemsiogfs_gnu_General.sh  Nemsiogfs_intel_Cray.sh  Nemsiogfs_intel_Dell.sh  Nemsiogfs_intel_General.sh  Nemsiogfs_intel_Hera.sh  Nemsiogfs_intel_Jet.sh  Nemsiogfs_intel_Theia.sh  Nemsiogfs_intel_Wcoss.sh
cmake/: PackageConfig.cmake.in
modulefiles/: v2.2.0
modulefiles/.svn/: all-wcprops  entries
spack/: README  package.py
src/: CMakeLists.txt  Makefile  build.sh  clean.sh  makefile  nemsio_gfs.f90
tests/: CMakeLists.txt  README  code.sh  test.sh  test_mod.pf  test_nemsiogfs.f90
tests/code/: Makefile
tests/modulefiles/: gsm_v14.1.0.cray
unit_test/: run_cray.sh
unit_test/.svn/: all-wcprops  entries
unit_test/.svn/text-base/: build_code.sh.svn-base
unit_test/code/.svn/: all-wcprops  entries
unit_test/code/.svn/text-base/: makefile.sh.svn-base
unit_test/modulefiles/: gsm_v14.1.0.theia
unit_test/modulefiles/.svn/: all-wcprops  entries
unit_test/modulefiles/.svn/text-base/: gsm_v14.1.0.wcoss.svn-base
